--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+chrono = { version = "0.4.41", features = [ "serde" ] }
 iced = "0.13.1"
+rust_decimal = { version = "1.37.1", features = [ "serde" ] }
+serde = "1.0.219"
