start on server

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,9 @@ members = [
   "server",
   "shared"
 ]
-
 resolver = "3"
+
+[workspace.dependencies]
+serde = { version ="1.0" }
+rust_decimal = { version = "1.37", features = [ "serde" ] }
+chrono = { version = "0.4", features = [ "serde" ] }
