--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -4,7 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-chrono = { version = "0.4.41", features = [ "serde" ] }
+shared = { path = "../shared" }
 iced = "0.13.1"
-rust_decimal = { version = "1.37.1", features = [ "serde" ] }
-serde = "1.0.219"
+serde.workspace = true
+chrono.workspace = true
+rust_decimal.workspace = true
