--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -4,3 +4,10 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+chrono.workspace = true
+rust_decimal.workspace = true
+serde.workspace = true
+axum = "0.8.4"
+sqlx = { version = "0.8.6", features = [ "runtime-tokio", "tls-rustls", "mysql", "rust_decimal", "chrono" ] }
+tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
+
