--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -10,4 +10,5 @@ serde.workspace = true
 axum = "0.8.4"
 sqlx = { version = "0.8.6", features = [ "runtime-tokio", "tls-rustls", "mysql", "rust_decimal", "chrono" ] }
 tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
+dotenv = "0.15.0"
 
