--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -4,8 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-shared = { path = "../shared" }
-iced = "0.13.1"
 serde.workspace = true
 chrono.workspace = true
 rust_decimal.workspace = true
+shared.workspace = true
+iced = "0.13.1"
