--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2024"
 chrono.workspace = true
 rust_decimal.workspace = true
 serde.workspace = true
-shared = { path = "../shared" }
+shared.workspace = true
 axum = "0.8.4"
 sqlx = { version = "0.8.6", features = [ "runtime-tokio", "tls-rustls", "mysql", "rust_decimal", "chrono" ] }
 tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
