--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -8,5 +8,6 @@ serde.workspace = true
 chrono.workspace = true
 rust_decimal.workspace = true
 shared.workspace = true
-iced = "0.13.1"
+iced = { git = "https://github.com/iced-rs/iced.git", branch = "master" }
 serde_json = "1.0.140"
+reqwest = "0.12.20"
