--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -8,6 +8,6 @@ serde.workspace = true
 chrono.workspace = true
 rust_decimal.workspace = true
 shared.workspace = true
-iced = { git = "https://github.com/iced-rs/iced.git", branch = "master" }
+iced = { git = "https://github.com/iced-rs/iced.git", branch = "master", features = [ "tokio" ] }
 serde_json = "1.0.140"
-reqwest = "0.12.20"
+reqwest = { version = "0.12.20", features = [ "json" ] }
