--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -14,5 +14,6 @@ chrono.workspace = true
 rust_decimal.workspace = true
 shared.workspace = true
 iced = { git = "https://github.com/iced-rs/iced.git", branch = "master", features = [ "tokio" ] }
+iced_aw = { version = "0.12.2", default-features = false, features = [ "date_picker" ] }
 serde_json = "1.0.140"
 reqwest = { version = "0.12.20", features = [ "json" ] }
